显式赋予 GITHUB_TOKEN 操作 GitHub Pages 和推送代码的权限，解决默认权限不足GitHub Action失败的问题。

--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -37,3 +37,7 @@ jobs:
           publish_dir: ./_build/html # 要部署的文档目录（Sphinx 生成的 HTML 所在位置）
           # 可选：指定部署分支（默认是 gh-pages）
           # destination_dir: docs
+          # 新增！给 GITHUB_TOKEN 推送代码的权限
+        permissions:
+          pages: write # 允许修改 GitHub Pages
+          id-token: write # 允许生成 OIDC 令牌（可选，增强权限）
