升级 peaceiris/actions-gh-pages 到 v4（支持权限配置）

--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -1,43 +1,39 @@
-name: Sphinx Docs CICD # 工作流名称，自定义
+name: Sphinx Docs CICD
 
 on:
   push:
-    branches: [main] # 监听 main 分支的 push 事件，代码提交到 main 就触发
+    branches:
+      - main # 推送到 main 分支触发
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest # 使用 GitHub 提供的 Ubuntu 虚拟环境
+    runs-on: ubuntu-latest
 
     steps:
-      # 步骤 1：拉取 GitHub 仓库代码到虚拟环境
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 步骤 2：安装 Python + Sphinx 依赖
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.11 # 指定 Python 版本，和本地一致
+          python-version: 3.11
 
       - name: Install dependencies
         run: |
-          pip install sphinx  # 安装 Sphinx  
-          # 如果有其他依赖（如主题），也可在此安装，比如：  
+          pip install sphinx
+          # 若有其他依赖（如主题），在此安装
           # pip install sphinx-rtd-theme
 
-      # 步骤 3：构建 Sphinx 文档（生成 HTML）
       - name: Build Sphinx docs
-        run: make html # 执行 Sphinx 构建命令，生成 _build/html
+        run: make html # 生成 _build/html
 
-      # 步骤 4：部署到 GitHub Pages（自动发布文档）
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        # 升级到 v4，支持 permissions
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub 自动提供的权限令牌
-          publish_dir: ./_build/html # 要部署的文档目录（Sphinx 生成的 HTML 所在位置）
-          # 可选：指定部署分支（默认是 gh-pages）
-          # destination_dir: docs
-          # 新增！给 GITHUB_TOKEN 推送代码的权限
-          permissions:
-          pages: write # 允许修改 GitHub Pages
-          id-token: write # 允许生成 OIDC 令牌（可选，增强权限）
+          # 改用个人令牌（更稳定）
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          publish_dir: ./_build/html
+        permissions:
+          pages: write # 允许修改 Pages
+          id-token: write # 增强权限（v4 需配合）
