统一 publish_dir 为实际输出目录（./build/html），尝试解决HTML正确显示需求文档的问题

--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -36,4 +36,4 @@ jobs:
         with:
           # 改用个人令牌（需在仓库 Secrets 中配置 PERSONAL_ACCESS_TOKEN）
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          publish_dir: ./_build/html
+          publish_dir: ./build/html
